# c64os-util

./: .readthedocs.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: actions.yaml  deploy-dev.yaml  deploy.yaml  pull-request.yaml
c64os_util/: __init__.py
c64os_util/car/: __init__.py  archive.py  common.py  header.py
c64os_util/car/record/: __init__.py  directory.py  file.py  header.py  record.py
c64os_util/cli/: __init__.py  car.py
c64os_util/cli/parser/: car.py
c64os_util/schema/: util.py
c64os_util/schema/app/: menu.py  meta.py
c64os_util/schema/car/: archive.py  common.py  header.py  record.py
c64os_util/util/: __init__.py  codec.py  functions.py
docs/: __init__.py  conf.py  index.rst  installation.rst  usage-api.rst  usage-cli.rst
docs/car/: api.rst  index.rst  record.rst  script.rst
docs/car/api/: archive.rst  record.rst
docs/car/archive/: archive.rst  common.rst  header.rst
docs/car/record/: directory.rst  file.rst  header.rst  record.rst
scripts/: car.py  docs.py  tests.py
tests/: __init__.py  test_archive.py  test_menu.py  test_meta.py  util.py
tests/data/: about.t  archive.car  test.car
