[tool.poetry]
name = "c64os-util"
version = "0.1.0"
description = "A collection of utilities for dealing with C64 OS files."
authors = ["voidstar <voidstar@anachronauts.club>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/woodrowbarlow/c64os-util"
repository = "https://github.com/woodrowbarlow/c64os-util"
keywords = ["commodore", "c64", "C64 OS"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]
packages = [{include = "c64os_util"}]

[tool.poetry.dependencies]
python = ">=3.8.1"
cbmcodecs2 = "^1.2"

[tool.poetry.scripts]
car = 'scripts.car:main'

[tool.poe.tasks]
test = "python -u -m unittest discover tests"
doc = "sphinx-build -M html docs docs/_build"
lint = "black ."

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
poethepoet = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
